# rfm22b-galileo

./: CMakeLists.txt  README.md  license.txt  rfm22-client.cpp  rfm22-server.cpp  rfm22-test.cpp
include/: GenericSPI.h  HardwareSPI.h  RF22.h
src/: CMakeLists.txt  RF22.cpp
